src/objects/OV_Shelf_Tile__c.object
<CustomObject>
    <description>Shelf Tile for storing 1 or more Report Tiles and Report Folders underneath</description>
    <fields>
        <fullName>Colour__c</fullName>
        <description>hex value populated by the Related Shelf</description>
        <inlineHelpText>hex value populated by the Related Shelf</inlineHelpText>
        <label>Colour</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICON_Label__c</fullName>
        <description>Codes for the SVG versions of the Shelf ICONS</description>
        <formula>CASE(TEXT( Tile_ICON__c ), 
&quot;Briefcase&quot;, &quot;Custom40&quot; , 
&quot;World&quot;,     &quot;Custom68&quot;,
&quot;Tent&quot;,      &quot;Custom50&quot;,
&quot;Table&quot;,     &quot;Custom63&quot;,
&quot;Lorry&quot;,     &quot;Custom98&quot;,
&quot;Motorbike&quot;, &quot;Custom72&quot;,
&quot;Helicopter&quot;,&quot;Custom72&quot;,
&quot;Signpost&quot;,  &quot;Custom58&quot;,
&quot;Telescope&quot;, &quot;Custom39&quot;,
&quot;Factory&quot;,   &quot;Custom32&quot;,
&quot;Custom68&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ICON code for Salesforce1</inlineHelpText>
        <label>ICON Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelf__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Shelf</label>
        <referenceTo>OV_Shelf__c</referenceTo>
        <relationshipName>OV_ShelfTiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tile_Colour__c</fullName>
        <description>Colour received from related Shelf</description>
        <formula>Shelf__r.Colour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Colour received from related Shelf</inlineHelpText>
        <label>Tile Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tile_ICON__c</fullName>
        <description>ICON Background</description>
        <inlineHelpText>Tile ICON Background</inlineHelpText>
        <label>Tile ICON</label>
        <picklist>
            <picklistValues>
                <fullName>Briefcase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helicopter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lorry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorbike</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signpost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telescope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>World</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>From the linked Shelf</description>
        <formula>Shelf__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Links to whether e Subject or Moment</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>One View Shelf Tile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Shelf__c</columns>
        <columns>Tile_Colour__c</columns>
        <columns>Tile_ICON__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Shelf_Tiles</fullName>
        <columns>NAME</columns>
        <columns>Tile_Colour__c</columns>
        <columns>Shelf__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Shelf Tiles</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Shelf Tile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One View Shelf Tiles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>